dividing the project into two components nodejs-function and nodejs-server. Adding terraform creating google cloud function.

--- a/components/nodejs-server/src/package.json
+++ b/components/nodejs-server/src/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "author": "Dariusz Biela",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@google-cloud/firestore": "^6.4.1",
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
+    "sanitize": "^2.1.2"
   }
 }
