--- a/components/nodejs-function/src/package.json
+++ b/components/nodejs-function/src/package.json
@@ -9,6 +9,7 @@
   "author": "Dariusz Biela",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/firestore": "^6.4.2",
     "@google-cloud/functions-framework": "^3.1.3"
   }
 }
